# DINOSLAM3

./: .gitignore  README.md  download_tum.py  project_prompt.md  pyproject.toml  research1.md  research3.md
.devcontainer/: Dockerfile
.history/: .gitignore_20260205134240  .gitignore_20260205151116  .gitignore_20260205151119  .gitignore_20260205151130
docs/: TRAINING_REGIME.md  pyslam_integration.md
pyslam_integration/: README.md  run_baseline.sh  run_semantic.sh  setup.sh  spec.md
pyslam_integration/pyslam/: main_slam.py  pyproject.toml
pyslam_integration/pyslam/pyslam/: config_parameters.py
pyslam_integration/pyslam/pyslam/local_features/: feature_dinoslam3.py  feature_manager.py  feature_tracker_configs.py  feature_types.py
pyslam_integration/pyslam/pyslam/loop_closing/: loop_detector_configs.py
pyslam_integration/pyslam/pyslam/slam/: map_point.py
pyslam_integration/pyslam/pyslam/slam/cpp/: lib  optimizer_g2o.h
pyslam_integration/pyslam/pyslam/slam/cpp/build_old_1770982359/pybind11/: Makefile  cmake_install.cmake
pyslam_integration/pyslam/pyslam/slam/cpp/build_old_1770982359/tests_cpp/: Makefile  test_cpp_to_python_map  test_image_management  test_json_camera  test_json_frame  test_json_keyframe  test_kdtree_basic  test_kdtree_validation  test_numpy_cv_mat  test_numpy_map_state  test_python_to_cpp_map
pyslam_integration/pyslam/pyslam/slam/cpp/casters/: slam_opaque_types.h
pyslam_integration/pyslam/pyslam/slam/cpp/py_module/: optimizer_g2o_bind_helpers.h
pyslam_integration/pyslam/pyslam/slam/cpp/utils/: descriptor_helpers.h
pyslam_integration/pyslam/pyslam/utilities/: evaluation.py
pyslam_integration/pyslam/pyslam/viz/: viewer3D.py
pyslam_integration/pyslam/settings/: _DINOSLAM3_rgbd_dataset_freiburg1_room.yaml  _DINOSLAM3_rgbd_dataset_freiburg3_long_office_household.yaml
(+103 files in other folders)
