[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dino-slam3"
version = "0.2.0"
description = "DINOv3 + fine refinement local feature learning for TUM RGB-D and SLAM integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "torchvision",
  "numpy",
  "opencv-python",
  "pillow",
  "pyyaml",
  "tqdm",
  "rich",
  "matplotlib",

  # DINOv3 via Hugging Face Transformers (v4.56+ supports DINOv3 backbones)
  "transformers>=4.56.0",

  # Differentiable geometry utilities (PnP DLT)
  "kornia>=0.7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
