[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyslam-minimal-v2"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "opencv-python",
  "pyyaml",
  "scipy",
  "matplotlib",
  "evo",
  "torch",
  "transformers",
  "timm",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["pyslam*"]
